--- a/web/app/views/layouts/application.amp.erb
+++ b/web/app/views/layouts/application.amp.erb
@@ -13,6 +13,7 @@
 	<script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 	<script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
 	<script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
+	<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
 	<!-- Google Analytics-->
 	<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -169,8 +170,8 @@
 					</g>
 				</svg>
 			</a>
-			<amp-social-share type="system">
-				Compartilhar
+			<amp-social-share type="whatsapp">
+
 			</amp-social-share>
 		</div>
 	</div>
