--- a/web/app/javascript/packs/application-amp.scss
+++ b/web/app/javascript/packs/application-amp.scss
@@ -69,7 +69,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 12px 24px 12px 24px;
+    padding: 12px 16px 12px 16px;
 
     & a {
       display: flex;
@@ -83,7 +83,7 @@ a {
 }
 
 .me-content {
-  padding: 76px 18px 18px 24px;
+  padding: 76px 16px 24px 16px;
   max-width: 500px;
   margin: auto;
 
@@ -153,11 +153,12 @@ a {
 
   &__cover {
     background-color: $border-color;
-    border-radius: $media-border-radius;
+    border-radius: 0;
     box-shadow: $media-box-shadow-large;
+    margin: -16px -24px 0 -16px;
   }
 
-  &__date, &__place {
+  &__date, &__place, &__ticket {
     display: flex;
     margin: 24px 0;
 
@@ -188,6 +189,10 @@ a {
         border: 0;
       }
     }
+  }
+
+  &__ad {
+    margin: 16px 0 16px 0;
   }
 }
 
